<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrinkAndGo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_venue_search">VenueSearchActivity</string>
    <string name="name">Name</string>
    <string name="confirm_password">Re-enter Password</string>
    <string name="card_number">Credit Card Number</string>
    <string name="password_error">Passwords do not match!</string>
    <string name="input_error">All fields must be filled!</string>
    <string name="username_error">Username or password is incorrect!</string>
    <string name="username_not_unique">Username is already taken!</string>
    <string name="search_venue">Search Venue</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="back">Back</string>
    <string name="cart">Cart</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="order">Order</string>
    <string name="self">Self-Service</string>
    <string name="table">Table-Service</string>
    <string name="table_num">Table Number</string>
    <string name="enter_table_num">Enter Table Number</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="order_number">Order Number</string>
    <string name="status">Status</string>
    <string name="home">Return</string>
    <string name="new_order">New</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="served">Drinks to be served.</string>

</resources>
