<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.CS477.drinkandgo.SignUpActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:orientation="vertical"
	        android:padding="@dimen/title_margin" >
	
	        <EditText
	            android:id="@+id/name_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:hint="@string/name"
	            android:inputType="textPersonName" >
	
	            <requestFocus />
	        </EditText>
	
	        <EditText
	            android:id="@+id/email_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:hint="@string/email"
	            android:inputType="textEmailAddress" />
	
	        <EditText
	            android:id="@+id/password_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:hint="@string/password"
	            android:inputType="textPassword" />
	
	        <EditText
	            android:id="@+id/password_view2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:hint="@string/confirm_password"
	            android:inputType="textPassword" />
	
	        <EditText
	            android:id="@+id/card_number_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:hint="@string/card_number"
	            android:inputType="number" />
	
	        <Button
	            android:id="@+id/submit_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/submit"
	            android:onClick="performSignUp" />
	
	    </LinearLayout>
	</ScrollView>
</LinearLayout>
